Changes to swagger docs
