# swagger-output.json
@@ -8,7 +8,6 @@
   "host": "contacts.cse341.zaquman.com",
   "basePath": "/",
   "schemes": [
-    "http",
     "https"
   ],
   "paths": {
@@ -115,13 +114,42 @@
         "tags": [
           "Contacts"
         ],
-        "description": "",
+        "description": "All fields are optional and should be removed if not being updated",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "John"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Smith"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "john.smith@example.com"
+                },
+                "favoriteColor": {
+                  "type": "string",
+                  "example": "blue"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "01-31-1970"
+                }
+              }
+            }
           }
         ],
         "responses": {
